deploy/components/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  creationTimestamp: null
  name: frontend-service-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: frontend-service.cluster.koalaops.com
    http:
      paths:
      - backend:
          service:
            name: frontend-service-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - frontend-service.cluster.koalaops.com
    secretName: frontend-service-tls-cert
status:
  loadBalancer: {}
